--- a/ru/index.html
+++ b/ru/index.html
@@ -11,8 +11,18 @@ title: arcanis
       <header>
         <h1>{{ page.title }}</h1>
 
-        <p class="view"><a href="/ru/blog/">Блог</a><br>
-                        <a href="/ru/projects/">Проекты</a></p>
+        <label class="spoiler">
+          <input type="checkbox" class="bo"/>
+          <div class="title"><a href="/ru/blog/">Блог</a></div>
+          <div class="body">
+            <p>
+              {% for post in site.categories.ru limit:3 %}
+                <a href="{{ post.url }}">{{ post.title }}</a><br>
+              {% endfor %}
+            </p>
+          </div>
+        </label>
+        <p class="view"><a href="/ru/projects/">Проекты</a></p>
         <p class="view"><a href="/ru/about">Обо мне</a></p>
 
       </header>
