yet another edit spoilers

--- a/ru/authors.html
+++ b/ru/authors.html
@@ -23,7 +23,7 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
     <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
     <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
     <li>Блок комментариев был создан <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> и лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
-    <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a>, и, судя по всему, он не имеет никакой лицензии.</li>
+    <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> и <a href="http://habrahabr.ru/post/167151/">Defff</a>, и, судя по всему, он не имеет никакой лицензии.</li>
     <li>Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">кастомную лицензию</a>.</li>
     <li>Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">кастомную лицензию</a>.</li>
     <li><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> лицензирован под <a href="http://scripts.sil.org/OFL">The SIL Open Font License</a>.</li>
