--- a/authors.html
+++ b/authors.html
@@ -21,7 +21,7 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
     <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
     <li>The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
     <li>The comment block was created by <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> and licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
-    <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and it looks like it has no any license.</li>
+    <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and <a href="http://habrahabr.ru/post/167151/">Defff</a> and it looks like it has no any license.</li>
     <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300">custom license</a>.</li>
     <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use">custom license</a> too.</li>
     <li><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font License</a>.</li>
