--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ title: arcanis' homepage
         <h1>{{ page.title }}</h1>
 
         <label class="spoiler">
-          <input type="checkbox" class="bo"/>
-          <div class="title"><a href="/blog/">Latest posts:</a></div>
-          <div class="body">
-            <p>
-              {% for post in site.categories.en limit:3 %}
-                <a href="{{ post.url }}">{{ post.title }}</a><br>
-              {% endfor %}
-            </p>
+          <input type="checkbox" tabindex="-1">
+          <div class="box">
+            <a href="/blog/">My blog</a> <span class="close">(hide)</span><span class="open">(show)</span>
+            <blockquote>
+            {% for post in site.categories.en limit:3 %}
+              <a href="{{ post.url }}">{{ post.title }}</a><br>
+            {% endfor %}
+            </blockquote>
           </div>
         </label>
         <p class="view"><a href="/projects/">My projects</a></p>
