small edit of authors

--- a/authors.html
+++ b/authors.html
@@ -30,4 +30,4 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
 
 <p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
 
-<p align="center">&copy; Evgeniy Alekseev, 2014</p>
+<p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
