small edit of zshrc

--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -407,13 +407,13 @@ pack () {
 <p align="justify">Here is a special function for <code>su</code>:</p>
 {% highlight bash %}
 su () {
-  checksu=0
-  for flags in $*; do
-    if [[ $flags == "-" ]]; then
-      checksu=1
-    fi
+  CHECKSU=0
+  for FLAG in $*; do
+    [[ $FLAG == "-" ]] && CHECKSU=1
+    [[ $FLAG == "-l" ]] && CHECKSU=1
+    [[ $FLAG == "--login" ]] && CHECKSU=1
   done
-  if [[ $checksu == 0 ]]; then
+  if [[ $CHECKSU == 0 ]]; then
     echo "Use 'su -', Luke"
     /usr/bin/su - $*
   else
