--- a/ru/_posts/2014-01-14-about-zshrc.html
+++ b/ru/_posts/2014-01-14-about-zshrc.html
@@ -271,8 +271,8 @@ alias zless='vimpager'
 
 <p align="justify">ls аллиасы (смотри <a href="http://unixhelp.ed.ac.uk/CGI/man-cgi?ls">man ls</a>):</p>
 {% highlight bash %}
-alias ls='show_which ls && ls --color=auto'
-alias ll='show_which ll && ls --group-directories-first -l --human-readable'
+alias ls='show_which ls && ls --color=auto --group-directories-first'
+alias ll='show_which ll && ls -l --human-readable'
 alias lr='show_which lr && ls --recursive'
 alias la='show_which la && ll --almost-all'
 alias lx='show_which lx && ll -X --ignore-backups'
