--- a/ru/_posts/2014-01-14-about-zshrc.html
+++ b/ru/_posts/2014-01-14-about-zshrc.html
@@ -427,6 +427,8 @@ su () {
 rm () {
   # error check
   [ $# -eq 0 ] && { echo "Files are not set!"; return 1 }
+  echo "$@" | grep -qe '-h\|--help' && { echo "Usage: rm FILE..."; return 0 }
+  echo "$@" | grep -q "-" && echo "Warning: this function doesn't support any flags"
   # set trash path
   TRASHDIR="$HOME/.local/share/Trash"
   TRASHFILE="${TRASHDIR}/files"
@@ -444,7 +446,7 @@ rm () {
   [[ ! $CONFIRM =~ [yY] ]] && return 1
   # move
   for FILE in "$@"; do
-    DESTFILE="$(basename ${FILE})"
+    DESTFILE="$(basename \"${FILE}\")"
     SUFFIX='';
     ITER=0;
     while [ -e "${TRASHFILE}/${DESTFILE}${SUFFIX}" ]; do
@@ -452,8 +454,8 @@ rm () {
       ITER=$(expr ${ITER} + 1)
     done
     echo "Remove '${FILE}'"
-    mv "${FILE}" "${TRASHFILE}/${DESTFILE}${SUFFIX}"
-    echo "[Trash Info]\nPath=$(realpath ${FILE})\nDeletionDate=$(date +%Y-%m-%dT%H:%M:%S)" > "${TRASHINFO}/${DESTFILE}${SUFFIX}.trashinfo"
+    mv -- "${FILE}" "${TRASHFILE}/${DESTFILE}${SUFFIX}" || return 1
+    echo "[Trash Info]\nPath=$(realpath \"${FILE}\")\nDeletionDate=$(date +%Y-%m-%dT%H:%M:%S)" > "${TRASHINFO}/${DESTFILE}${SUFFIX}.trashinfo" || return 1
   done
 }
 {% endhighlight %}
