--- a/ru/_posts/2014-01-14-about-zshrc.html
+++ b/ru/_posts/2014-01-14-about-zshrc.html
@@ -446,7 +446,7 @@ rm () {
   [[ ! $CONFIRM =~ [yY] ]] && return 1
   # move
   for FILE in "$@"; do
-    DESTFILE="$(basename \"${FILE}\")"
+    DESTFILE="$(basename "${FILE}")"
     SUFFIX='';
     ITER=0;
     while [ -e "${TRASHFILE}/${DESTFILE}${SUFFIX}" ]; do
@@ -455,7 +455,7 @@ rm () {
     done
     echo "Remove '${FILE}'"
     mv -- "${FILE}" "${TRASHFILE}/${DESTFILE}${SUFFIX}" || return 1
-    echo "[Trash Info]\nPath=$(realpath \"${FILE}\")\nDeletionDate=$(date +%Y-%m-%dT%H:%M:%S)" > "${TRASHINFO}/${DESTFILE}${SUFFIX}.trashinfo" || return 1
+    echo "[Trash Info]\nPath=$(realpath "${FILE}")\nDeletionDate=$(date +%Y-%m-%dT%H:%M:%S)" > "${TRASHINFO}/${DESTFILE}${SUFFIX}.trashinfo" || return 1
   done
 }
 {% endhighlight %}
