added link to repo edited link to home computer

--- a/ru/index.html
+++ b/ru/index.html
@@ -22,7 +22,8 @@ title: arcanis
             </blockquote>
           </div>
         </label>
-        <p class="view"><a href="/ru/projects/">Проекты</a></p>
+        <p class="view"><a href="/ru/projects/">Проекты</a><br>
+        <a href="ftp://89.249.170.38/repo">Репозиторий</a></p>
         <p class="view"><a href="/ru/about">Обо мне</a></p>
 
       </header>
