--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: arcanis' homepage
         <label class="spoiler">
           <input type="checkbox" tabindex="-1">
           <div class="box">
-            <a href="/blog/">My blog</a> <span class="close">(hide)</span><span class="open">(show)</span>
+            <a href="/blog/">Blog</a> <span class="close">(hide)</span><span class="open">(show)</span>
             <blockquote>
             {% for post in site.categories.en limit:3 %}
               <a href="{{ post.url }}">{{ post.title }}</a><br>
@@ -21,7 +21,8 @@ title: arcanis' homepage
             </blockquote>
           </div>
         </label>
-        <p class="view"><a href="/projects/">My projects</a></p>
+        <p class="view"><a href="/projects/">Projects</a><br>
+        <a href="ftp://89.249.170.38/repo">Repository</a></p>
         <p class="view"><a href="/about">About me</a></p>
 
       </header>
