added netctl-gui page small edition

--- a/projects/index.html
+++ b/projects/index.html
@@ -85,6 +85,13 @@ groups:
             description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
             links:
                 - <a href="https://github.com/arcan1s/julius-actions">GitHub repo</a>
+          - title: Netctl GUI
+            short: netctl-gui
+            description: <code>Netctl GUI</code> graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>CPP</code> using <code>Qt4</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a widget and DataEngine for KDE.
+            links:
+                - <a href="/projects/netctl-gui">Homepage</a>
+                - <a href="https://github.com/arcan1s/netctlplasmoid">GitHub repo</a>
+                - <a href="https://aur.archlinux.org/packages/netctl-gui">Archlinux AUR package</a>
 ---
   <body>
     <div class="wrapper">
