--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -83,9 +83,16 @@ groups:
                 - <a href="https://aur.archlinux.org/packages/food_gui">Пакет в AUR</a>
           - title: julius-actions
             short: julius-actions
-            description: <code>julius-actions</code> Скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
+            description: <code>julius-actions</code> скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
             links:
                 - <a href="https://github.com/arcan1s/julius-actions">Репозиторий на GitHub</a>
+          - title: Netctl GUI
+            short: netctl-gui
+            description: <code>Netctl GUI</code> графическая оболочка для <code>netctl</code> (набор скриптов для поднятия сети в Arch'е). Написан на <code>CPP</code> с использованием библиотеки <code>Qt4</code>. На текущим момент умеет работать с профилями, в том числе создавать новые, а также умеет подключаться к WiFi. Также предоставляет виджет и DataEngine для KDE.
+            links:
+                - <a href="/ru/projects/netctl-gui">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/netctl-gui">Репозиторий на GitHub</a>
+                - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
 ---
   <body>
     <div class="wrapper">
