--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -71,7 +71,7 @@ sudo ./install.sh
 <p align="justify">Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
 </ul>
 
-<h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+<h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
 <p align="justify">Все было протестировано на последних версиях зависимостей.</p>
 <ul>
   <li>Bash (включая awk, grep, sed)</li>
@@ -118,7 +118,7 @@ ExecStart=/usr/bin/git-etc -c /новый/путь/к/git-etc.conf
 systemctl restart git-etc
 {% endhighlight %}
 
-<h3><a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Options</h3>
+<h3><a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Опции</h3>
 <table>
   <tr>
     <th>DIRECTORY</th>
