--- a/ru/_posts/2014-03-06-site-changes.html
+++ b/ru/_posts/2014-03-06-site-changes.html
@@ -24,7 +24,7 @@ domain.name.           912     IN      A       192.30.252.153
 domain.name.           912     IN      A       192.30.252.154
 ...
 {% endhighlight %}</li>
-  <li>На радостях создал <a href="ftp://89.249.170.38/repo">собственный репозиторий</a>, в котором будут лежать некоторые пакеты из AUR, которые я использую. Планируется поддержка обеих архитектур.</li>
+  <li>На радостях создал <a href="ftp://repo.arcanis.name/repo">собственный репозиторий</a>, в котором будут лежать некоторые пакеты из AUR, которые я использую. Планируется поддержка обеих архитектур.</li>
   <li>Поскольку репозиторий требует ftp, то перевел samba на ftp. Проблему доступа решил опциями монтирования:
 {% highlight bash %}
 # чтение и запись (файл ограничен 2 Гб)
@@ -52,7 +52,11 @@ ascii_upload_enable=YES
 ftpd_banner=Welcome to arcanis
 listen=YES
 {% endhighlight %}
-В ближайшее время планируется сделать перенаправление запросов с <code>repo.arcanis.name</code> на нужный IP адрес (если пойму, как).
+Теперь добавим переадресацию с <code>repo.arcanis.name</code> на нужный IP адрес. Для этого внесем следующие записи в DNS:
+{% highlight bash %}
+repo.arcanis.name.   A   89.249.170.38
+{% endhighlight %}
+(Обратите внимание на точку в конце.)
   </li>
   <li>В ближайшее время (как дойду до магазина с деньгами) планируется приобретение небольшого сервера для работы на постоянной основе (компиляция пакетов, репозиторий, файлообмен, бэкапы).</li>
 </ul>
