--- a/ru/index.html
+++ b/ru/index.html
@@ -23,7 +23,7 @@ title: arcanis
           </div>
         </label>
         <p class="view"><a href="/ru/projects/">Проекты</a><br>
-        <a href="ftp://89.249.170.38/repo">Репозиторий</a></p>
+        <a href="ftp://repo.arcanis.name/repo">Репозиторий</a></p>
         <p class="view"><a href="/ru/about">Обо мне</a></p>
 
       </header>
