--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: arcanis' homepage
           </div>
         </label>
         <p class="view"><a href="/projects/">Projects</a><br>
-        <a href="ftp://89.249.170.38/repo">Repository</a></p>
+        <a href="ftp://repo.arcanis.name/repo">Repository</a></p>
         <p class="view"><a href="/about">About me</a></p>
 
       </header>
