added instruction for redirection from www.*

--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -13,6 +13,8 @@ description: I decided to change my site. You may find short list of changes bel
 {% highlight bash %}
 @    A   192.30.252.153
 @    A   192.30.252.154
+# redirection from www.*
+www CNAME   @
 {% endhighlight %}
 (Symbol <code>@</code> means you root domain.) And next wait for two hours. You may find out the result as follows:
 {% highlight bash %}
