--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -2,7 +2,7 @@
 category: en
 type: paper
 layout: paper
-tags: сайт, github pages
+tags: site, github pages
 title: Site changes
 short: site-changes
 description: I decided to change my site. You may find short list of changes below.
