added multilib support

--- a/_posts/2014-03-23-creating-custom-repo.html
+++ b/_posts/2014-03-23-creating-custom-repo.html
@@ -52,8 +52,13 @@ func_build() {
   if grep "arch=('any')" PKGBUILD -q; then
     /usr/bin/sudo /usr/bin/staging-i686-build -r "${ROOT}"
   else
-    /usr/bin/sudo /usr/bin/staging-i686-build -r "${ROOT}"
-    /usr/bin/sudo /usr/bin/staging-x86_64-build -r "${ROOT}"
+    if grep "lib32" PKGBUILD -q; then
+      /usr/bin/sudo /usr/bin/staging-i686-build -r "${ROOT}"
+      /usr/bin/sudo /usr/bin/multilib-staging-build -r "${ROOT}"
+    else
+      /usr/bin/sudo /usr/bin/staging-i686-build -r "${ROOT}"
+      /usr/bin/sudo /usr/bin/staging-x86_64-build -r "${ROOT}"
+    fi
   fi
   /usr/bin/cp *.pkg.tar.xz "${PREPARE}"
 }
@@ -67,6 +72,7 @@ cd "${STAGINGDIR}"
 {% highlight bash %}
 username ALL=NOPASSWD: /usr/bin/staging-i686-build
 username ALL=NOPASSWD: /usr/bin/staging-x86_64-build
+username ALL=NOPASSWD: /usr/bin/multilib-staging-build
 {% endhighlight %}
 
 <h3><a name="signing" class="anchor" href="#signing"><span class="octicon octicon-link"></span></a>Packages signing</h3>
