--- a/_posts/2014-03-23-creating-custom-repo.html
+++ b/_posts/2014-03-23-creating-custom-repo.html
@@ -98,7 +98,7 @@ echo "x86_64 packages: ${x86_64_PACKAGES}"
 <p align="justify">Here is a function for removal packages from database and repository:</p>
 {% highlight bash %}
 func_remove() {
-  DBPATH="$1"
+  DBNAME="$1"
   PKGNAME="$2"
   /usr/bin/repo-remove ${DBNAME}.db.tar.gz ${PKGNAME}
   /usr/bin/repo-remove ${DBNAME}.files.tar.gz ${PKGNAME}
@@ -112,7 +112,7 @@ export -f func_remove
 cd "${REPODIR}/i686"
 for PACKAGE in ${i686_PACKAGES}; do
   PKGNAME=$(echo ${PACKAGE} | /usr/bin/awk -F '-' '{for(i=1; i<=NF-3;i++) {printf("%s-", $i);}}' | /usr/bin/sed 's/.$//')
-  /usr/bin/find -name "${PKGNAME}*" -type f -exec /usr/bin/bash -c "func_remove "${DBNAME}" "${PKGNAME}"" \;
+  /usr/bin/find -name "${PKGNAME}*.pkg.tar.xz" -type f -exec /usr/bin/bash -c "func_remove "${DBNAME}" "${PKGNAME}"" \;
   /usr/bin/cp "${PREPAREDIR}/${PACKAGE}"{,.sig} .
 done
 /usr/bin/repo-add --new ${DBNAME}.db.tar.gz *.pkg.tar.xz
@@ -124,7 +124,7 @@ done
 cd "${REPODIR}/x86_64"
 for PACKAGE in ${x86_64_PACKAGES}; do
   PKGNAME=$(echo ${PACKAGE} | /usr/bin/awk -F '-' '{for(i=1; i<=NF-3;i++) {printf("%s-", $i);}}' | /usr/bin/sed 's/.$//')
-  /usr/bin/find -name "${PKGNAME}*" -type f -exec /usr/bin/bash -c "func_remove "${DBNAME}" "${PKGNAME}"" \;
+  /usr/bin/find -name "${PKGNAME}*.pkg.tar.xz" -type f -exec /usr/bin/bash -c "func_remove "${DBNAME}" "${PKGNAME}"" \;
   /usr/bin/cp "${PREPAREDIR}/${PACKAGE}"{,.sig} .
 done
 /usr/bin/repo-add --new ${DBNAME}.db.tar.gz *.pkg.tar.xz
