update for ptextmonitor

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -225,6 +225,18 @@ sudo plasmapkg -g -i py-text-monitor-1.5.0.plasmoid
     <td><p align="justify">Current song artist. One of supported music players must be installed.</p></td>
   </tr>
   <tr>
+    <td><code>$album</code></td>
+    <td><p align="justify">Current song album. One of supported music players must be installed.</p></td>
+  </tr>
+  <tr>
+    <td><code>$progress</code></td>
+    <td><p align="justify">Current song progress. One of supported music players must be installed (mpd does not support yet).</p></td>
+  </tr>
+  <tr>
+    <td><code>$time</code></td>
+    <td><p align="justify">Current song duration. One of supported music players must be installed.</p></td>
+  </tr>
+  <tr>
     <td><code>$title</code></td>
     <td><p align="justify">Current song title. One of supported music players must be installed.</p></td>
   </tr>
