--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -226,6 +226,18 @@ sudo plasmapkg -g -i py-text-monitor-1.5.0.plasmoid
     <td><p align="justify">Исполнитель текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</p></td>
   </tr>
   <tr>
+    <td><code>$album</code></td>
+    <td><p align="justify">Альбом текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</p></td>
+  </tr>
+  <tr>
+    <td><code>$progress</code></td>
+    <td><p align="justify">Прогресс текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен (mpd в настоящий момент не поддерживается).</p></td>
+  </tr>
+  <tr>
+    <td><code>$time</code></td>
+    <td><p align="justify">Длительность текущей пени. Один из поддерживаемых музыкальных плееров должен быть установлен.</p></td>
+  </tr>
+  <tr>
     <td><code>$title</code></td>
     <td><p align="justify">Название текущей песни. Один из поддерживаемых музыкальных плееров должен быть установлен.</p></td>
   </tr>
