--- a/_posts/2014-03-23-creating-custom-repo.html
+++ b/_posts/2014-03-23-creating-custom-repo.html
@@ -142,7 +142,7 @@ cd "${STAGINGDIR}"
 {% endhighlight %}
 
 <h3><a name="file" class="anchor" href="#file"><span class="octicon octicon-link"></span></a>File</h3>
-<p align="justify">Here is <a href="https://raw.github.com/arcan1s/dotfiles/master/repo-update">the script</a>. Download source tarballs and run script (editing variables if it is necessary).</p>
+<p align="justify">Here is <a href="https://github.com/arcan1s/repo-scripts">the scripts</a>. Download source tarballs and run script (editing variables if it is necessary).</p>
 
 <h2><a name="using" class="anchor" href="#using"><span class="octicon octicon-link"></span></a>Repository usage</h2>
 <p align="justify">Just add following lines to <code>/etc/pacman.conf</code>:</p>
