--- a/ru/_posts/2014-03-23-creating-custom-repo.html
+++ b/ru/_posts/2014-03-23-creating-custom-repo.html
@@ -143,7 +143,7 @@ cd "${STAGINGDIR}"
 {% endhighlight %}
 
 <h3><a name="file" class="anchor" href="#file"><span class="octicon octicon-link"></span></a>Файл</h3>
-<p align="justify"><a href="https://github.com/arcan1s/repo-scripts">Скрипт</a> целиком. Скачиваем исходники для пакетов, запускаем скрипт (при необходимости, редактируем переменные) и радуемся жизни.</p>
+<p align="justify"><a href="https://github.com/arcan1s/repo-scripts">Скрипты</a> целиком. Скачиваем исходники для пакетов, запускаем скрипт (при необходимости, редактируем переменные) и радуемся жизни.</p>
 
 <h2><a name="using" class="anchor" href="#using"><span class="octicon octicon-link"></span></a>Использование репозитория</h2>
 <p align="justify">Просто добавляем в файл <code>/etc/pacman.conf</code> следующие строки:</p>
